--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Absolut Bazaar">
     
     <meta property="og:title" content="Brunei 2026 ABGR Booking">
-    <meta property="og:description" content="Join MaLaysia biggest Raya festival happening in Brunei. Secure your premium booth at BRIDEX today.">
+    <meta property="og:description" content="Join Malaysia biggest Raya festival happening in Brunei. Secure your premium booth at BRIDEX today.">
     <meta property="og:image" content="https://i.imgur.com/MmHrwvv.jpeg">
     <meta property="og:url" content="https://booking.absolutbazaar.com">
     <meta property="og:type" content="website">
@@ -1200,4 +1200,5 @@
         });
     </script>
 </body>
+
 </html>
