--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@
         <div class="announcer-container w-full mb-0 rounded-t-xl -mb-1 relative z-10">
             <div class="announcer-track">
                 <span>Visa Application is now open,contact your sales person to register.</span>
-                <span> LIMITED BOOTHS! BOOK YOUR SLOT FOR ABSOLUT BAZAAR x GAYA RAYA 2026 @ BRIDEX BRUNEI NOW! 討 FIRST COME FIRST SERVE.</span>
+                <span> LIMITED BOOTHS! BOOK YOUR SLOT FOR ABSOLUT BAZAAR x GAYA RAYA 2026 @ BRIDEX BRUNEI NOW! FIRST COME FIRST SERVE.</span>
                 <span>Visa Application is now open,contact your sales person to register.</span>
-                <span>LIMITED BOOTHS! BOOK YOUR SLOT FOR ABSOLUT BAZAAR x GAYA RAYA 2026 @ BRIDEX BRUNEI NOW! 討 FIRST COME FIRST SERVE.</span>
+                <span>LIMITED BOOTHS! BOOK YOUR SLOT FOR ABSOLUT BAZAAR x GAYA RAYA 2026 @ BRIDEX BRUNEI NOW! FIRST COME FIRST SERVE.</span>
             </div>
         </div>
 
@@ -1263,4 +1263,5 @@ this.panX=0; this.panY=0; this.updateTransform(); },
     </script>
 </body>
 </html>
+
 
